[tool.poetry]
name = "content-creation-crew"
version = "0.1.0"
description = "AI-Powered Content Creation Crew"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
crewai = "^0.1.0"
crewai-tools = "^0.1.0"

[tool.poetry.scripts]
content-crew = "content_creation.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
